wflow_publish("analysis/_site.yml", republish = TRUE, all = TRUE)

--- a/analysis/04_fdrAnalysis.Rmd
+++ b/analysis/04_fdrAnalysis.Rmd
@@ -85,6 +85,9 @@ p
 Save figure for use in manuscript.
 
 ```{r}
+outDir <- here::here("output/figures")
+if (!dir.exists(outDir)) dir.create(outDir)
+
 fig <- here("output/figures/Fig-3C.rds")
 saveRDS(p, fig, compress = FALSE)
 ```
