--- a/analysis/index.Rmd
+++ b/analysis/index.Rmd
@@ -18,41 +18,36 @@ on how to reproduce the complete analyis, please see the
 
 Analysis
 --------
-1. [Explore EPIC array bias](exploreArrayBiasEPIC.html)
+1. [Explore EPIC array bias](01_exploreArrayBiasEPIC.html)
     * Explore the various array biases on the EPIC array that affect gene set testing.
       
-2. [Explore 450k array bias](exploreArrayBias450.html)
+2. [Explore 450k array bias](02_exploreArrayBias450.html)
     * Explore the various array biases on the 450k array that affect gene set testing.
 
-3. [Generate a blood cell RNAseq "truth" set](expressionGenesets.html)
+3. [Generate a blood cell RNAseq "truth" set](03_expressionGenesets.html)
     * Analyse an RNAseq sorted blood cell dataset and identify the top ranked 
       gene sets for each cell type comparison.
       
-4. [Compare FDR of different methods](fdrAnalysis.html)
+4. [Compare FDR of different methods](04_fdrAnalysis.html)
     * Analyse the normal samples from a 450k array KIRC TCGA dataset using 
       various genset testing methods to estimate their false discovery rate control.
       
-5. [Compare performance of different methods](exploreData.html)
+5. [Compare performance of different methods](05_exploreData.html)
     * Analyse an EPIC array sorted blood cell dataset using various gene set 
       testing methods. Compare how well the different methods perform using several 
       metrics.
 
-6. [Compare run-time of different methods](runTimeComparison.html)
+6. [Compare run-time of different methods](06_runTimeComparison.html)
     * Analyse an EPIC array sorted blood cell dataset using various gene set 
       testing methods. Compare the run-time of the different methods.
       
-7. [Evaluate GOregion](regionAnalysis.html)
+7. [Evaluate GOregion](07_regionAnalysis.html)
     * Evalulate GOregion, our extension of gometh for geneset testing of 
       differentially methylated regions (DMRs) identified by DMR finding software.
 
 8. [Effect of gene set size parameters on methylGSA](methylGSAParamSweep.html)
     * Analyse an EPIC array sorted blood cell dataset using various gene set 
       testing methods. Compare the run-time of the different methods.
-      
-9. [Restricting Sig. CpGs in GOmeth by genomic region](gomethByFeature.html)
-    * Evalulate the impact of on gene set testing using GOmeth of restricting 
-      significant CpGs based on genomic feature using the EPIC sorted blood cell 
-      dataset.
       
 
 Licenses
