--- a/analysis/03_expressionGenesets.Rmd
+++ b/analysis/03_expressionGenesets.Rmd
@@ -159,6 +159,9 @@ p
 Save figure for use in manuscript.
 
 ```{r}
+outDir <- here::here("output/figures")
+if (!dir.exists(outDir)) dir.create(outDir)
+
 fig <- here("output/figures/SFig-4A.rds")
 saveRDS(p1, fig, compress = FALSE)
 
@@ -263,6 +266,9 @@ for(i in 1:ncol(cont)){
     tmp$contrast <- colnames(cont)[i] 
     kegg <- bind_rows(kegg, tmp)
 }
+
+outDir <- here::here("output/cache-rnaseq")
+if (!dir.exists(outDir)) dir.create(outDir)
 
 saveRDS(go, here(glue("data/cache-rnaseq/RNAseq-GO.rds")))
 saveRDS(kegg, here(glue("data/cache-rnaseq/RNAseq-KEGG.rds")))
