--- a/analysis/03_expressionGenesets.Rmd
+++ b/analysis/03_expressionGenesets.Rmd
@@ -267,7 +267,7 @@ for(i in 1:ncol(cont)){
     kegg <- bind_rows(kegg, tmp)
 }
 
-outDir <- here::here("output/cache-rnaseq")
+outDir <- here::here("data/cache-rnaseq")
 if (!dir.exists(outDir)) dir.create(outDir)
 
 saveRDS(go, here(glue("data/cache-rnaseq/RNAseq-GO.rds")))
