--- a/analysis/index.Rmd
+++ b/analysis/index.Rmd
@@ -19,6 +19,9 @@ Abstract
 --------
 DNA methylation is one of the most commonly studied epigenetic marks, due to its role in disease and development. Illumina methylation arrays have been extensively used to measure methylation across the human genome. Methylation array analysis has primarily focused on preprocessing, normalisation and identification of differentially methylated CpGs and regions. GOmeth and GOregion are new methods for performing unbiased gene set testing following differential methylation analysis. Benchmarking analyses demonstrate GOmeth outperforms other approaches and GOregion is the first method for gene set testing of differentially methylated regions. Both methods are publicly available in the missMethyl Bioconductor R package.
 
+
+Authors
+-------
 Jovana Maksimovic^1,2,3^, Alicia Oshlack^1,4^, Belinda Phipson^1,2+^
 
 ^1^ Peter MacCallum Cancer Centre, Melbourne, Victoria, 3000, Australia
@@ -27,7 +30,9 @@ Jovana Maksimovic^1,2,3^, Alicia Oshlack^1,4^, Belinda Phipson^1,2+^
 ^3^ Murdoch Children’s Research Institute, Parkville, Victoria, 3052, Australia
 ^4^ School of Biosciences, University of Melbourne, Parkville, Victoria, 3010, 
     Australia
+    
 ^+^ corresponding author
+ 
  
 Analysis
 --------
