--- a/analysis/04_fdrAnalysis.Rmd
+++ b/analysis/04_fdrAnalysis.Rmd
@@ -141,6 +141,188 @@ if(!file.exists(outFile)){
 }
 ```
 
+# Load data: BRCA
+
+We are using publicly available kidney clear cell carcinoma (BRCA) 450k data from The Cancer Genome Atlas (TCGA). We are using only the normal samples to look at false discovery rate (FDR) control by various methylation gene set testing methods.
+
+First, download the data using the `curatedTCGAData` Bioconductor package and then extract the normal samples. The data is provided as β values with masked data points; data points were masked as “NA” if their detection p-value was greater than 0.05 or the probe was annotated as having a SNP within 10 base pairs or repeat within 15 base pairs or the interrogated CpG. We extract only the 97 normal samples.  
+
+```{r, message=FALSE, warning=FALSE, results='hide'}
+brca <- curatedTCGAData(diseaseCode = "BRCA", assays = "Methylation_methyl450", 
+                        dry.run = FALSE)
+brca <- splitAssays(brca, c("11")) # extract only the normal samples
+exp <- experiments(brca)[[1]]
+meta <- colData(brca)
+betas <- as.matrix(assay(exp))
+colnames(betas) <- substr(colnames(betas), 1, 12)
+m <- match(colnames(betas), meta$patientID)
+meta <- meta[m, ]
+head(meta[, 1:5])
+```
+
+## Quality control
+
+Removed any probes with >1 NA value.
+
+```{r}
+betasNoNA <- betas[rowSums(is.na(betas)) == 0, ]
+mds <- plotMDS(betasNoNA, gene.selection = "common", plot = FALSE)
+dat <- tibble(x = mds$x, y = mds$y, gender = meta$gender)
+
+ggplot(dat, aes(x = x, y = y, colour = gender)) +
+  geom_point() +
+  labs(x = "Principal Component 1", y = "Principal Component 2", 
+       colour = "Sex")
+```
+
+Remove any remaining SNP-affected probes and multi-mapping probes. We do not remove sex chromosome probes as all the samples are from females. This leaves 371,789 probes for downstream analysis.
+
+```{r, message=FALSE}
+betasFlt <- rmSNPandCH(betasNoNA, rmXY = FALSE, rmcrosshyb = TRUE)
+dim(betasFlt)
+```
+
+The structure of the data looks similar.
+
+```{r, message=FALSE}
+mds <- plotMDS(betasFlt, gene.selection = "common", plot = FALSE)
+dat <- tibble(x = mds$x, y = mds$y, gender = meta$gender)
+
+pal <- paletteer::paletteer_d("wesanderson::Moonrise3", 2)
+cols <- c("female" = pal[2], "male" = pal[1])
+p <- ggplot(dat, aes(x = x, y = y, colour = gender)) +
+  geom_point(size = 2) +
+  labs(x = "Principal Component 1", y = "Principal Component 2", 
+       colour = "Sex") +
+    scale_color_manual(values = cols)
+p
+```
+
+```{r}
+dat <- as_tibble(melt(betasFlt))
+colnames(dat) <- c("cpg", "ID", "beta")
+
+p <- ggplot(dat, aes(x = beta, group = ID)) + 
+  geom_density(size=0.5, alpha=0.5, show.legend = FALSE)
+
+p + labs(x = "Beta value", y = "Density")
+```
+
+```{r}
+numModes <- apply(betasFlt, 2, find_num_modes, adjust = 1.35)
+
+dat <- as_tibble(melt(betasFlt))
+colnames(dat) <- c("cpg", "ID", "beta")
+dat$mode <- rep(as.character(numModes), each = nrow(betasFlt))
+
+p <- ggplot(dat, aes(x = beta, colour = mode, group = ID)) + 
+    geom_density(size=0.5, alpha=0.5) +
+    labs(color = "No. modes", x = "Beta value", y = "Density")
+
+p 
+```
+
+```{r, message=FALSE}
+dims <- list(c(1,2), c(2,3), c(1,3), c(3,4))
+p <- vector("list", 4)
+
+for(i in 1:length(p)){
+    mds <- plotMDS(betasFlt, gene.selection = "common", plot = FALSE,
+               dim.plot = dims[[i]])
+    dat <- tibble(x = mds$x, y = mds$y, mode = as.character(numModes))
+    
+    p[[i]] <- ggplot(dat, aes(x = x, y = y, colour = mode)) +
+        geom_point(size = 2) +
+        labs(x = glue("Principal Component {dims[[i]][1]}") , 
+             y = glue("Principal Component {dims[[i]][2]}"), 
+             colour = "No. Modes") 
+    
+}
+
+(p[[1]] + p[[2]]) /
+    (p[[3]] + p[[4]])
+```
+
+
+Colour MDS plot using different variables to explore any further structure in the data.
+
+```{r, fig.width=8, fig.height=7}
+mds <- plotMDS(betasFlt, gene.selection = "common", plot = FALSE, 
+               dim.plot = c(1,3))
+dat <- tibble(x = mds$x, y = mds$y, gender = meta$gender)
+
+dat$age <- meta$years_to_birth
+dat$race <- sub(" or", "\nor", meta$race)
+dat$ethnicity <- sub(" or", "\nor", meta$ethnicity)
+
+a <- ggplot(dat, aes(x = x, y = y, colour = age)) +
+  geom_point() +
+  labs(x = "Principal Component 1", y = "Principal Component 3", 
+       colour = "Age") +
+  viridis::scale_color_viridis(direction = -1)
+
+b <- ggplot(dat, aes(x = x, y = y, colour = race)) +
+  geom_point() +
+  labs(x = "Principal Component 1", y = "Principal Component 3", 
+       colour = "Race") +
+  theme(legend.text = element_text(size = 7))
+
+c <- ggplot(dat, aes(x = x, y = y, colour = ethnicity)) +
+  geom_point() +
+  labs(x = "Principal Component 1", y = "Principal Component 3", 
+       colour = "Ethnicity")  +
+  theme(legend.text = element_text(size = 7))
+
+(b + c) / a
+```
+
+Remove samples with more than 2 modes in their density distributions and black or african american samples.
+
+```{r}
+keep <- numModes == 2 & meta$race != "black or african american" & !is.na(meta$race)
+betasFlt <- betasFlt[, keep]
+meta <- meta[keep, ]
+```
+
+Structure of data after removal of outlier samples.
+
+```{r}
+mds <- plotMDS(betasFlt, gene.selection = "common", plot = FALSE)
+dat <- tibble(x = mds$x, y = mds$y)
+
+p1 <- ggplot(dat, aes(x = x, y = y)) +
+  geom_point(size = 2) +
+  labs(x = "Principal Component 1", y = "Principal Component 2")
+
+mds <- plotMDS(betasFlt, gene.selection = "common", plot = FALSE, 
+               dim.plot = c(1,3))
+dat <- tibble(x = mds$x, y = mds$y)
+
+p2 <- ggplot(dat, aes(x = x, y = y)) +
+  geom_point(size = 2) +
+  labs(x = "Principal Component 1", y = "Principal Component 3")
+
+dat <- as_tibble(melt(betasFlt))
+colnames(dat) <- c("cpg", "ID", "beta")
+
+p3 <- ggplot(dat, aes(x = beta, group = ID)) + 
+    geom_density(size = 0.5, alpha = 0.5) +
+    labs(x = "Beta value", y = "Density")
+
+(p1 + p2) / p3 
+```
+
+Save the filtered TCGA BRCA data for use in subsequent FDR analysis.
+
+```{r}
+outFile <- here("data/datasets/TCGA.BRCA.rds")
+
+if(!file.exists(outFile)){
+    saveRDS(betasFlt, file = outFile)
+}
+```
+
+
 # FDR analysis
 
 We randomly select 5, 10, 20, 40, 80 samples per "group" from the TCGA KIRC normal samples and then perform differential methylation analysis between the two "groups". We do this 100 times for each "group" size. There should be no significant differential methylation between the groups as the data contains no signal. Consequently, we expect about 5% false gene set discoveries across the 100 simulations from methods that are "holding their size". 
