--- a/analysis/index.Rmd
+++ b/analysis/index.Rmd
@@ -42,19 +42,28 @@ Analysis
 2. [Explore 450k array bias](02_exploreArrayBias450.html)
     * Explore the various array biases on the 450k array that affect gene set testing.
 
-3. [Generate a blood cell RNAseq "truth" set](03_expressionGenesets.html)
+3a. [Generate a blood cell RNAseq "truth" set](03_expressionGenesets.html)
     * Analyse an RNAseq sorted blood cell dataset and identify the top ranked 
+      gene sets for each cell type comparison.
+
+3b. [Generate a breast cancer cell-line RNAseq "truth" set](03_expressionGenesetsNew.html)
+    * Analyse an RNAseq breast cancer cell-line dataset and identify the top ranked 
       gene sets for each cell type comparison.
       
 4. [Compare FDR of different methods](04_fdrAnalysis.html)
     * Analyse the normal samples from a 450k array KIRC TCGA dataset using 
       various genset testing methods to estimate their false discovery rate control.
       
-5. [Compare performance of different methods](05_exploreData.html)
+5a. [Compare performance of different methods](05_exploreData.html)
     * Analyse an EPIC array sorted blood cell dataset using various gene set 
       testing methods. Compare how well the different methods perform using several 
       metrics.
 
+5b. [Compare performance of different methods](05_exploreDataNew.html)
+    * Analyse an EPIC array breast cancer cell-line dataset using various gene set 
+      testing methods. Compare how well the different methods perform using several 
+      metrics.
+      
 6. [Compare run-time of different methods](06_runTimeComparison.html)
     * Analyse an EPIC array sorted blood cell dataset using various gene set 
       testing methods. Compare the run-time of the different methods.
